--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.0"
+  },
+  "dependencies": {
+    "gsap": "^3.11.1"
   }
 }
